--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-language: java
-install:
-  mvn install -Dmaven.test.skip -B -fae
-  script:
-    mvn test -B -fae
+nguage: java 
+jdk:
+  - oraclejdk7
